src/test/ui/associated-types/associated-types-unconstrained.stderr
error[E0284]: type annotations required: cannot resolve `<_ as Foo>::A == _`
  --> $DIR/associated-types-unconstrained.rs:14:20
   |
LL |     let x: isize = Foo::bar();
   |                    ^^^^^^^^

error: aborting due to previous error

